# python-template

./: LICENSE  README.md  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/actions/workflows/: lint.yml
.github/workflows/: test.yml
project/: __init__.py  main.py
tests/: test_main.py
